# TkSugar

./: LICENSE  Pipfile  README.md  setup.cfg
samples/: calc.py  customwidget.py  filerefer.py  localize.py  menu.py  multifile.py  multiwindow.py  notebook.py
samples/yml/: calc.yml  customwidget.yml  filerefer.yml  localize_script.yml  localize_target.yml  menu.yml  multifile_main.yml  multiwindow_child.yml  multiwindow_owner.yml  notebook.yml  notebook_tab1.yml  notebook_tab2.yml
tests/: test_generator.py  test_generator_command.py  test_generator_methods.py  test_generatorsupport.py  test_localizer.py
tests/definition/: button.yml  idtags.yml  multinode.yml  multinode_hash.yml  multiple_files_sub.yml  params1.yml  params2.yml  plane.yml  support_haschild.yml
tests/definition/command_test/: call_command.yml  call_command_multiple.yml  call_customwidget.yml  call_menu.yml  call_multifile_main.yml  call_multifile_sub.yml  call_notebook.yml  call_notebook_toplevel.yml
tests/definition/generator_test/: button.yml  children.yml  children_error.yml  command_unknown.yml  has_command.yml  japanese_sjis.yml  japanese_utf8.yml  localize_script.yml  localize_target.yml  multiple_files.yml  plane.yml  variable.yml  variable_error.yml  variable_error2.yml  variable_error3.yml  variable_error4.yml  variable_in_array.yml
tests/definition/localizer_test/: haslist.yml  japanese_sjis.yml  japanese_utf8.yml  safecase.yml  (+1 more)
tksugar/: __init__.py  eventreciever.py  generator.py  localizer.py  tkmanager.py
tksugar/widgets/: __init__.py  generatorsupport.py  menu.py  notebook.py
(+1 files in other folders)
