[metadata]
name = tksugar
version = attr: tksugar.__version__
author = TakamiChie
author_email = chie@onpu-tamago.net
license = MIT
description = A module that generates a structured Tk window frame from a text file.
keywords =
url = https://github.com/TakamiChie/TkSugar
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
  pyyaml
  pyyaml-include